# draw2

./: README.md  README_fr.md  build_models.py  draw.py  inference_(temp).py  pyproject.toml  tools.py
.github/workflows/: push.yml
discord_bot/: PRIVACY.md  TERMS.md
draw/: __main__.py  draw.py  draw_config.json  utils.py
src/draw/: __init__.py  __main__.py  cardnames.json  draw.py  run.py  utils.py
