[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "draw"
version = "0.1.0"
authors = [
  { name="HichTala", email="hich.tala.phd@gmail.com" },
]
description = "Detecting and Recognizing A Wide range of cards"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "accelerate>=1.0.1",
    "datasets>=3.1.0",
    "lap>=0.5.12",
    "opencv-python>=4.12.0.88",
    "requests>=2.32.4",
    "selenium>=4.27.1",
    "transformers>=4.46.3",
    "ultralytics>=8.3.245",
]

[project.urls]
Homepage = "https://github.com/HichTala/draw2"
Issues = "https://github.com/HichTala/draw2/issues"
